# 2024-yonsei-gdsc-example

./: .gitignore  Makefile  README.md  hello.py  pyproject.toml
step0/: README.md  hello.py
step1/: README.md
step1/answer/: 1_preprocess.py  README.md
step1/assignments/: README.md
step1/data/: example.csv  labeled_data.csv
step2/answer/: 2_dataset.py
step2/assignment/: README.md
step2/encoded_dataset/: cache-201de976c67ed572.arrow  cache-7946031b0c2bba07.arrow  data-00000-of-00001.arrow  dataset_info.json  state.json
step3/answer/: 3_train.py
step3/assignment/: EVALUATION.md  README.md
step3/logs/: README.md  events.out.tfevents.1735215868.MacBook-Pro-44.local.94057.0  events.out.tfevents.1735216424.MacBook-Pro-44.local.99206.0  events.out.tfevents.1735216519.MacBook-Pro-44.local.99206.1
step4/answer/: 4_api.py  4_inference.py
step4/assignment/: README.md
step5/assignment/: README.md
step5/submission/: HINT.md
