[project]
name = "2024-yonsei-gdsc-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.26.0",
    "datasets>=3.2.0",
    "fastapi>=0.115.6",
    "pandas>=2.2.3",
    "pydantic>=2.10.4",
    "scikit-learn>=1.6.0",
    "tensorboard>=2.18.0",
    "torch>=2.5.1",
    "transformers>=4.47.1",
    "uvicorn>=0.34.0",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git" }
